# PDBO-LZJ

./: .gitignore  LICENSE  README.md  main.py  problem_parser.py  pyproject.toml  requirements.txt  run_subspace_random_g8_g10_patch.cmd  solver_jax.py  utils.py
docs/: hessian_initialization.md
examples/: run_examples.py
instance/MAXSAT/3CNF/: example.cnf
pdbo/: __init__.py  curvature.py  problems.py  refinement.py  solvers.py
scripts/: analyze_stagnation.py  compare_reopening_strategies.py  compare_spectral_initializations.py  download_gset.py  run_labs_pubo_qoblib.py  run_subspace_random_patch_background.py  run_sweep_sizes.sh  sweep_g_y.py  sweep_hessian_init.py
scripts/pdqubo/: labs.sh  maxkcut.sh  maxsat.sh  mc.sh  mis.sh
tests/: test_curvature.py  test_curvature_solver.py  test_reopening.py  test_smoke.py  test_spectral_initializations.py  test_stagnation_analysis.py
